# joylight

./: .gitignore  CMakeLists.txt  README.md
joylight-backend/: Cargo.toml
joylight-backend/src/: fixture.rs  fixture_template.rs  main.rs  parameter.rs
joylight-frontend/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_main.cpp_parameters  stylesheet.qss
joylight-frontend/inc/: config.h  fixture.h  fixtureDialog.h  fixtureselect.h  mainwindow.h  socket.h
joylight-frontend/src/: fixtureDialog.cpp  fixtureselect.cpp  mainwindow.cpp  moc_fixtureDialog.cpp_parameters  moc_fixtureselect.cpp_parameters  moc_mainwindow.cpp_parameters  moc_socket.cpp_parameters  socket.cpp
joylight-frontend/style/forms/: fixtureDialog.ui  fixtureselect.ui  mainwindow.ui
